2008-06-03  Lars-Peter Clausen <lars@metafoo.de>

	Added wrapper for GimpNumberPairEntry
	* plug-ins/pygimp/gimpui.defs
	* plug-ins/pygimp/gimpui.override

2008-06-01  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/__init__.py: Added wrapper for Palettes

2008-05-29  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/__init__.py: Added wrapper objects for Brushes and Patterns
	* plug-ins/pygimp/gimpshelf.py: Forgot that one in last commit

2008-05-29  Lars-Peter Clausen  <lars@metafoo.de>

	Move gimpenums, gimpshelf, gimpui, gimpcolor to the gimp package and remove
	the leading gimp. So they are now accessed as gimp.enums.
	The old modules import everything from the new ones.

	* plug-ins/pygimp/gimpcolor.py
	* plug-ins/pygimp/gimpshelf.py
	* plug-ins/pygimp/gimpui.py
	* plug-ins/pygimp/gimpenums.py
	* plug-ins/pygimp/gimpthumb.py
	* plug-ins/pygimp/enums.py
	* plug-ins/pygimp/ui.py
	* plug-ins/pygimp/shelf.py
	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/gimpthumbmodule.c
	* plug-ins/pygimp/gimpenumsmodule.c
	* plug-ins/pygimp/pygimpcolor-api.h
	* plug-ins/pygimp/gimpuimodule.c
	* plug-ins/pygimp/gimpcolormodule.c
	* plug-ins/pygimp/pygimp-pdb.c
	* plug-ins/pygimp/Makefile.am

2008-05-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/gimpfu.py: Convert PDB_* enums to int when assigned
	to PF_* constants

2008-05-26  Lars-Peter Clausen  <lars@metafoo.de>

	* plug-ins/pygimp/gimpenumsmodule.c: Use GEnum objects rather then
	integer values for enums
	* plug-ins/pygimp/ pygimp-pdb.c:
	Added docstrings for the properties of a GimpPDBFunction object.
	(pygimp_pdb_function_new): Set the docstring of a GimpPDBFunction
	object to proc_help.
	When gimpenums is available set the type of the arguments to a
	GimpPDBArgType enum instead of a integer value.
	(pdb_getattro): Fix a bug where a pdb object returned a list of all pdb
	functions instead of the actual value for all properties starting with
	a underscore.
	
